# wyvern

./: .clang-format  .clang-tidy  BUILD.bazel  Makefile  compile_commands.json  entr.sh  makefile
lib/ycc/: BUILD.bazel  ylogger.cpp  yparser.cpp  ystream.cpp
lib/ycc/include/: ylogger.hpp  yparser.hpp  ystream.hpp  ytype.hpp
lib/yv/: BUILD.bazel  gaction.cpp  gcompiler.cpp  ggenerator.cpp  ggrammar.cpp  gitem.cpp  glogger.cpp  gparser.cpp  gproduction.cpp  gstate.cpp  gstatec.cpp  gsymbol.cpp  gsymbolc.cpp  gtransition.cpp  paction.cpp  pstate.cpp  pstatemachine.cpp  psymbol.cpp  ptransition.cpp  xaction.cpp  xchars.cpp  xcompiler.cpp  xgenerator.cpp  xnode.cpp  xnodec.cpp  xparser.cpp  xsyntaxtree.cpp  xtoken.cpp
lib/yv/include/: ecode.hpp  gaction.hpp  gcompiler.hpp  ggenerator.hpp  ggrammar.hpp  gitem.hpp  glexemetype.hpp  glogger.hpp  gparser.hpp  gproduction.hpp  gstate.hpp  gstatec.hpp  gsymbol.hpp  gsymbolassoc.hpp  gsymbolc.hpp  (+20 more)
libwyv/: BUILD.bazel  gcompiler.cpp  ggenerator.cpp  ggrammar.cpp  glogger.cpp  gparser.cpp
libwyv/include/: ecode.hpp  gcompiler.hpp  ggenerator.hpp  gparser.hpp
libwyvcc/: BUILD.bazel  mlogger.cpp  mparser.cpp  mstream.cpp
libwyvcc/include/: mlogger.hpp  mparser.hpp  mstream.hpp  mtype.hpp
src/: BUILD.bazel  mlogger.cpp  mparser.cpp  mstream.cpp  wyvcc.cpp  wyvern.cpp  ycc.cpp
src/include/: mparser.hpp  mstream.hpp
src/lib/: gcompiler.cpp  gcompiler.hpp  ggenerator.cpp  ggrammar.cpp  ggrammar.hpp  gparser.cpp  gparser.hpp
unit/: BUILD.bazel
unit/grammar/: errcalc.g  shader.g
unit/grammars/: json.g  xml.g
(+5 files in other folders)
