cc_library(
    name = "libwyv",
    srcs = [
        "gcompiler.cpp",
        "ggenerator.cpp",
        "ggrammar.cpp",
        "glogger.cpp",
        "gparser.cpp",
    ],
    hdrs = [
        "include/ecode.hpp",
        "include/gcompiler.hpp",
        "include/ggenerator.hpp",
        "include/ggrammar.hpp",
        "include/glogger.hpp",
        "include/gparser.hpp",
    ],
    visibility = ["//visibility:public"],
)
