cc_library(
    name = "libwyvcc",
    srcs = [
        "mlogger.cpp",
        "mparser.cpp",
        "mstream.cpp",
    ],
    hdrs = [
        "include/mlogger.hpp",
        "include/mparser.hpp",
        "include/mstream.hpp",
        "include/mtype.hpp",
    ],
    visibility = ["//visibility:public"],
)
